[package]
name = "enunion-derive"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
syn = { version = "2.0.66", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.85"
proc-macro-error = "1.0.4"
itertools = "0.13.0"
napi-derive-backend = { version = "1.0.60", features = ["type-def"] }
uuid = { version = "1.8.0", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"

[lib]
proc-macro = true
