[package]
name = "enunion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4"
syn = {version = "1.0.91", features = ["full"]}
quote = "1.0.18"
proc-macro2 = "1.0.37"
proc-macro-error = "1.0"
itertools = "0.10"
napi-derive-backend = { version = "1.0", features = ["type-def"]}

[lib]
proc-macro = true