[package]
name = "enunion"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
syn = { version = "2.0.48", features = ["full"] }
quote = "1.0.18"
proc-macro2 = "1.0.37"
proc-macro-error = "1.0"
itertools = "0.12.1"
napi-derive-backend = { version = "1.0.60", features = ["type-def"] }
uuid = { version = "1.1.2", features = ["v4"] }
sha2 = "0.10.2"
hex = "0.4.3"

[lib]
proc-macro = true
